--- a/rutas_buses.html
+++ b/rutas_buses.html
@@ -32,8 +32,8 @@
       <div id="map" class="col-md-8"></div>
       <div class="col-md-4">
         <ul class="nav nav-tabs">
-          <li class="active"><a data-toggle="tab" href="#base">Cantidad de buses transitando</a></li>
-          <li><a data-toggle="tab" href="#rutas">Buscar ruta de bus</a></li>
+          <li class="active"><a data-toggle="tab" href="#base" id="tabBase">Cantidad de buses transitando</a></li>
+          <li id="tabRutas"><a data-toggle="tab" href="#rutas">Buscar ruta de bus</a></li>
         </ul>
 
         <div class="tab-content">
